# badelf

./: Cargo.toml  miri.sh
src/: cli.rs  elf.rs  lib.rs  main.rs  tui.rs
src/elf/: common.rs  header.rs  mod.rs
test/: Makefile  exe
test/src/: exe.c  lib.c
