[package]
name = "badelf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tui"
path = "src/tui.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

[profile.release]
lto=true
strip=true
codegen-units = 1
panic = 'abort'

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
crossterm = "0.27.0"
